# git-checklist

./: git-checklist.cabal  stack.yaml
src/: Main.hs
