cabal-version:      >=1.10
name:               git-checklist
version:            1.0.0.0
license:            GPL
license-file:       LICENSE
maintainer:         dougal@dougalstanton.net
author:             Dougal Stanton
homepage:           https://github.com/dougalstanton/git-checklist
bug-reports:        https://github.com/dougalstanton/git-checklist/issues
synopsis:           Maintain per-branch checklists in Git
description:   
    Manage lists of TODO items for private branches
    from the command line. No configuration required
    and fast to learn, with human-editable storage
    format and comprehensive help information.
category:           Desktop, Development
build-type:         Simple
data-files:
    README.md

source-repository head
    type: git
    location: https://github.com/dougalstanton/git-checklist

executable git-checklist
    main-is:        Main.hs
    hs-source-dirs: src
    other-modules:
        Paths_git_checklist
    default-language: Haskell2010
    build-depends:
        base >=4.12.0.0 && <4.13,
        process >=1.6.5.0 && <1.7,
        filepath >=1.4.2.1 && <1.5,
        directory >=1.3.3.0 && <1.4,
        optparse-applicative >=0.14.3.0 && <0.15,
        pretty >=1.1.3.6 && <1.2,
        parsec >=3.1.14.0 && <3.2
